# heal

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.e2e  QUICK_START.md  README.md  TODO.md  Taskfile.yml  app.doql.css  app.doql.less  detected_from_alert  docker-compose.yml  goal.yaml  index.html  local.dev.txt  planfile.yaml  project.functions.functions.toon  project.functions.toon  pyproject.toml  pyqual.yaml
.taskill/: state.json
comparisons/: README.md  llm_cli_tools.md  privacy_libraries.md  shell_error_fixers.md
examples/: README.md  configuration_guide.md  docker_errors.md  error_recovery.md  getting_started.md  git_errors.md  multi_provider_usage.md  nodejs_errors.md  privacy_protection.md  privacy_quick_start.md  python_errors.md  troubleshooting.md
heal/: __init__.py  cli.py  main.py  privacy.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt
tests/: e2e_test.sh  test_cli.py  test_main.py  test_privacy.py
