[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heal"
version = "0.1.25"
description = "A Python package for healing and wellness"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["health", "wellness", "healing", "llm", "shell", "fix"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
privacy = [
    "priv-masker>=0.1.0",
    "spacy>=3.0.0",
    "detect-secrets>=1.4.0",
    "presidio-analyzer>=2.2.0",
    "datafog>=0.1.0",
    "faker>=18.0.0",
]

[project.scripts]
heal = "heal.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/heal"
Repository = "https://github.com/yourusername/heal"
Issues = "https://github.com/yourusername/heal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["heal*"]

[tool.setuptools.package-data]
heal = ["*.py", "*.txt", "*.md"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
